--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: barinak-deployment
+  namespace: default
 spec:
   replicas: 1
   selector:
